Fixed spacing between words.

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -191,7 +191,7 @@ The name of the element is inserted into the class attribute:
   line-height: 3em;
 }
 
-.tei-w {
+span[data-tei-id] {
   margin-right: 1em;
 }
 
